k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-devops-interview
  labels:
    app: backend-devops-interview
spec:
  type: ClusterIP
  selector:
    app: backend-devops-interview
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
